Simplify implementation and fix issues
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>